@@ -1,6 +1,7 @@
 1.0.0 - currently working on
 
 Features:
+- [#5664] Per-event flag for muting the notification emails
 - [#5651] Convert the cron job to a Scheduler task
 - [#5650] Limit the number of seats in the registration drop-down
 - [#5653] Add a configuration for PDF rendering of the manual
